--- a/graphql-server/src/main/resources/application.yml
+++ b/graphql-server/src/main/resources/application.yml
@@ -18,5 +18,5 @@ spring:
 logging:
   level:
     root: INFO
-    graphql : TRACE
-#    notprivacysafe : OFF
+    graphql : INFO
+    notprivacysafe : OFF
