Partially working widget

--- a/flutter-client/pubspec.yaml
+++ b/flutter-client/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   # Formatting numbers to strings
   intl: ^0.18.1
 
+  home_widget: ^0.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
