--- a/flutter-client/android/app/src/main/AndroidManifest.xml
+++ b/flutter-client/android/app/src/main/AndroidManifest.xml
@@ -3,10 +3,16 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-feature android:name="android.software.leanback" android:required="false" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+
     <application
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"
-        android:label="time_client">
+        android:icon="@mipmap/tv_icon"
+        android:label="GraphQL Time Client"
+        android:banner="@mipmap/tv">
         <receiver
             android:name=".ClockWidget"
             android:exported="true">
@@ -42,8 +48,10 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+
         <!--
  Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java
