Disable widget on web

--- a/flutter-client/web/manifest.json
+++ b/flutter-client/web/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "GraphQL subscription demo",
-    "short_name": "GraphQL clock",
+    "short_name": "GQL clock",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
