--- a/graphql-server/pom.xml
+++ b/graphql-server/pom.xml
@@ -21,11 +21,12 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.release>${java.version}</maven.compiler.release>
 
-        <main.class>nl.basjes.timer.TheClockApplication</main.class>
+        <main.class>nl.basjes.timer.TheApplication</main.class>
 
         <!-- Needed to make the build reproducible https://reproducible-builds.org/ -->
         <project.build.outputTimestamp>2023-10-10T10:10:10Z</project.build.outputTimestamp>
 
+        <graphql-java.version>20.0</graphql-java.version>
     </properties>
 
     <dependencies>
@@ -37,6 +38,10 @@
                     <groupId>org.yaml</groupId>
                     <artifactId>snakeyaml</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.graphql-java</groupId>
+                    <artifactId>graphql-java</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -44,6 +49,18 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
             <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
+            <version>${graphql-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-extended-scalars</artifactId>
+            <version>${graphql-java.version}</version>
         </dependency>
 
         <dependency>
@@ -66,6 +83,19 @@
                     <artifactId>graphql-java</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
